k8s/demo/kubecon2017/sce4-policies/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1-app
  labels:
    app: webstore
    role: db
spec:
  containers:
    - image: ciscolabs/epapp
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: pod1
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  name: pod2-frontend
  labels:
    role: frontend
spec:
  containers:
    - image: ciscolabs/epapp
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: pod2
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  name: pod3-backend
  labels:
    role: backend
spec:
  containers:
    - image: ciscolabs/epapp
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: pod3
  restartPolicy: Always
